グループ一覧取得APIを追加する
