# backend/openapi.yaml
@@ -126,6 +126,33 @@ paths:
             schema:
               $ref: '#/components/schemas/Repayment.CreateRequest'
   /groups:
+    get:
+      operationId: Group_getAll
+      summary: グループ一覧の取得
+      parameters: []
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Group.GetAllResponse'
+        '401':
+          description: Access is unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      tags:
+        - Groups
     post:
       operationId: Group_create
       summary: グループの作成
@@ -419,6 +446,27 @@ components:
         name:
           type: string
     Group.CreateResponse:
+      type: object
+      required:
+        - id
+        - name
+        - createdBy
+        - createdAt
+        - updatedAt
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        createdBy:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+    Group.GetAllResponse:
       type: object
       required:
         - id
